SDKs/1password.local/connect/1.3.0/java/README.md
# openapisdk

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'openapisdk:openapisdk:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            SDK sdk = builder.build();

            GetApiActivityRequest req = new GetApiActivityRequest() {{
                security = new GetApiActivitySecurity() {{
                    connectToken = new SchemeConnectToken() {{
                        authorization = "Bearer YOUR_BEARER_TOKEN_HERE";
                    }};
                }};
                queryParams = new GetApiActivityQueryParams() {{
                    limit = 2259404117704393152;
                    offset = 6050128673802995827;
                }};
            }};

            GetApiActivityResponse res = sdk.activity.getApiActivity(req);

            if (res.apiRequests.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### Activity

* `getApiActivity` - Retrieve a list of API Requests that have been made.

### Files

* `downloadFileById` - Get the content of a File
* `getDetailsOfFileById` - Get the details of a File
* `getItemFiles` - Get all the files inside an Item

### Health

* `getHeartbeat` - Ping the server for liveness
* `getServerHealth` - Get state of the server and its dependencies.

### Items

* `createVaultItem` - Create a new Item
* `deleteVaultItem` - Delete an Item
* `getVaultItemById` - Get the details of an Item
* `getVaultItems` - Get all items for inside a Vault
* `patchVaultItem` - Update a subset of Item attributes
* `updateVaultItem` - Update an Item

### Metrics

* `getPrometheusMetrics` - Query server for exposed Prometheus metrics

### Vaults

* `getVaultById` - Get Vault details and metadata
* `getVaults` - Get all Vaults

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
